# agent-progress

./: .gitignore  ARCHITECTURE_V2.md  README.md  index.html  notification.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  NotificationWindow.tsx  notification-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  router.rs  store.rs  watcher.rs
src/components/: Header.tsx  Settings.tsx  TaskCard.tsx  TaskList.tsx  TodoSection.tsx
src/hooks/: useSettings.ts  useTasks.ts  useTodos.ts
src/styles/: index.css  notification.css
