[package]
name = "agent-progress-overlay"
version = "1.0.0"
description = "A lightweight desktop overlay for visualizing AI agent task progress in real-time"
authors = ["Alex Brown <konfliktquake@gmail.com>"]
license = "MIT"
repository = "https://github.com/abrown84/agent-progress-overlay"
readme = "../README.md"
keywords = ["ai-agent", "progress", "overlay", "tauri", "visualization"]
categories = ["visualization", "gui"]
edition = "2021"

[lib]
name = "progress_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
urlencoding = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
