[package]
name = "agent-progress-overlay"
version = "1.0.0"
description = "A lightweight desktop overlay for visualizing AI agent task progress in real-time"
authors = ["Alex Brown <konfliktquake@gmail.com>"]
license = "MIT"
repository = "https://github.com/abrown84/agent-progress-overlay"
readme = "../README.md"
keywords = ["ai-agent", "progress", "overlay", "tauri", "visualization"]
categories = ["visualization", "gui"]
edition = "2021"

[lib]
name = "progress_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
urlencoding = "2"

# v2 Architecture additions
notify = "6"
notify-debouncer-mini = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
parking_lot = "0.12"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
